// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`advanced babel-plugin 1`] = `
<div>
  Loading...
</div>
`;

exports[`advanced babel-plugin 2`] = `
<p>
  MyComponent 
  {}
</p>
`;

exports[`advanced componentWillReceiveProps: changes component (dynamic require) 1`] = `
<div>
  Loading...
</div>
`;

exports[`advanced componentWillReceiveProps: changes component (dynamic require) 2`] = `
<p>
  MyComponent 
  {"page":"MyComponent"}
</p>
`;

exports[`advanced componentWillReceiveProps: changes component (dynamic require) 3`] = `
<div>
  Loading...
</div>
`;

exports[`advanced componentWillReceiveProps: changes component (dynamic require) 4`] = `
<p>
  MyComponent 
  {"page":"MyComponent2"}
</p>
`;
